fix+feat: 第4轮优化 - 修复5个P0问题、7个P1问题、5个P2问题
P0 修复:
- MergeSpec.executeSingle() 竞态条件: 新增线程安全方法传递实体参数
- FuncNode 构造函数改为包级私有，新增 of() 工厂方法
- EncryptConverter 密钥版本自动刷新（5分钟间隔）+ refreshKeyVersion()
- TenantContext 新增 checkHealth() 计数器健康检查
- MyJpaTemplate.executeInNewTransaction() 不再静默降级

P1 修复:
- ProjectionSpec OR/AND 支持任意数量子节点
- MergeSpec.FIELD_CACHE 改为 ConcurrentReferenceHashMap（弱引用）
- QueryCacheManager.put() 返回 boolean，满时驱逐最早条目
- SoftDeleteHelper SecurityException 改为抛出异常
- SAFE_FUNCTION_NAMES 扩展：窗口函数、聚合函数、日期截断等
- SubQuerySpec 新增 in/notIn(Collection) boolean 重载

P2 修复:
- SoftDeleteHelper.getField() 使用 FIELD_OBJECT_CACHE 缓存
- MyJpaTemplate.findAllStream 新增 EntityGraph 重载
- EncryptConverter 新增 reEncrypt() 密钥轮换迁移方法
- MaskSerializer 短字符串部分掩码
- SoftDeleteHelper.notDeletedQuery 使用 ofInternalPredicate 避免审计警告

构建验证: 853 tests, 0 failures, SpotBugs 0 issues, JaCoCo 达标